force-app/main/default/objects/ICPS__c/ICPS__c.object-meta.xml
<CustomObject>
    <description>This object will store the details of Inward Commercial Parcel System (ICPS) records for all international articles coming into Australia with a value of more than $1000</description>
    <label>ICPS</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Reference</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ICPS</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>