force-app/main/default/objects/ICPS__c/fields/Articles__c.field-meta.xml
<CustomField>
    <fullName>Articles__c</fullName>
    <description>A concatenation of all the article numbers linked to the ICPS record that will be used on the Notices and for searching purposes</description>
    <inlineHelpText>A concatenation of all the article numbers linked to the ICPS record that will be used on the Notices and for searching purposes</inlineHelpText>
    <label>Article/s</label>
    <length>255</length>
    <type>Text</type>
</CustomField>