force-app/main/default/objects/ICPS__c/fields/Contents__c.field-meta.xml
<CustomField>
    <fullName>Contents__c</fullName>
    <description>The nature of the contents within the article/s allocated to this ICPS</description>
    <inlineHelpText>The nature of the contents within the article/s allocated to this ICPS</inlineHelpText>
    <label>Contents</label>
    <length>255</length>
    <type>Text</type>
</CustomField>