force-app/main/default/objects/ICPS__c/fields/DateofPostingGCP__c.field-meta.xml
<CustomField>
    <fullName>DateofPostingGCP__c</fullName>
    <description>This formula field has been introduced purely for the consumption by GCP and so that this field can be put on the daily extract that is sent to Australia Border Force on a daily basis from GCP</description>
    <formula>IF( ISBLANK( DateofPosting__c ), &quot;Null&quot;, IF( DAY( DateofPosting__c ) &lt; 10, &quot;0&quot; + TEXT( DAY( DateofPosting__c )), TEXT( DAY( DateofPosting__c ))) + &quot; &quot; + CASE( MONTH( DateofPosting__c ), 1, &quot;Jan&quot;, 2, &quot;Feb&quot;, 3, &quot;Mar&quot;, 4, &quot;Apr&quot;, 5, &quot;May&quot;, 6, &quot;Jun&quot;, 7, &quot;Jul&quot;, 8, &quot;Aug&quot;, 9, &quot;Sep&quot;, 10, &quot;Oct&quot;, 11, &quot;Nov&quot;, 12, &quot;Dec&quot;, &quot;N/A&quot;) + &quot; &quot; + TEXT( YEAR( DateofPosting__c )) )</formula>
    <inlineHelpText>This formula field has been introduced purely for the consumption by GCP and so that this field can be put on the daily extract that is sent to Australia Border Force on a daily basis from GCP</inlineHelpText>
    <label>Date of Posting - GCP</label>
    <type>Text</type>
</CustomField>