force-app/main/default/objects/ICPS__c/fields/DeclaredValue__c.field-meta.xml
<CustomField>
    <fullName>DeclaredValue__c</fullName>
    <description>This is the sum of the declared value across all the articles associated with this ICPS</description>
    <inlineHelpText>This is the sum of the declared value across all the articles associated with this ICPS</inlineHelpText>
    <label>Declared Value</label>
    <summarizedField>ICPSArticle__c.DeclaredValue__c</summarizedField>
    <summaryForeignKey>ICPSArticle__c.ICPS__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>