force-app/main/default/objects/ICPS__c/fields/FirstNoticeDate__c.field-meta.xml
<CustomField>
    <fullName>FirstNoticeDate__c</fullName>
    <description>The date the first notice was generated.</description>
    <inlineHelpText>The date the first notice was generated.</inlineHelpText>
    <label>First Notice Date</label>
    <type>Date</type>
</CustomField>