force-app/main/default/objects/ICPS__c/fields/HoldUntilDate__c.field-meta.xml
<CustomField>
    <fullName>HoldUntilDate__c</fullName>
    <description>This is the date that the article/s allocated to this ICPS will be held until.</description>
    <inlineHelpText>This is the date that the article/s allocated to this ICPS will be held until.</inlineHelpText>
    <label>Hold Until Date</label>
    <type>Date</type>
</CustomField>