force-app/main/default/objects/ICPS__c/fields/IsEmailEnabled__c.field-meta.xml
<CustomField>
    <fullName>IsEmailEnabled__c</fullName>
    <description>This field is a back-end indicator as to whether or not the solution should allow sending of First Notice / Final Notice / other notifications via Email and SMS</description>
    <formula>IF( $CustomMetadata.ICPSSettings__mdt.ICPS_Settings.IsEmailEnabled__c, TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This field is a back-end indicator as to whether or not the solution should allow sending of First Notice / Final Notice / other notifications via Email and SMS</inlineHelpText>
    <label>IsEmailEnabled?</label>
    <type>Checkbox</type>
</CustomField>