force-app/main/default/objects/ICPS__c/fields/NoticeEmail__c.field-meta.xml
<CustomField>
    <fullName>NoticeEmail__c</fullName>
    <description>This is the Customs Email to be printed on the First and Final Notice</description>
    <formula>CASE(RecordType.DeveloperName,
    &apos;VIC&apos;, $CustomMetadata.ICPSSettings__mdt.VIC.Email__c ,
    &apos;NSW&apos;, $CustomMetadata.ICPSSettings__mdt.NSW.Email__c,
    &apos;QLD&apos;, $CustomMetadata.ICPSSettings__mdt.QLD.Email__c,
    &apos;WA&apos;, $CustomMetadata.ICPSSettings__mdt.WA.Email__c,
    NULL)</formula>
    <inlineHelpText>This is the Customs Email to be printed on the First and Final Notice</inlineHelpText>
    <label>Notice Email</label>
    <type>Text</type>
</CustomField>