force-app/main/default/objects/ICPS__c/fields/ReceiverAPCN__c.field-meta.xml
<CustomField>
    <fullName>ReceiverAPCN__c</fullName>
    <description>The Receiver APCN allocated to the ICPS record will be populated when an article is added to an ICPS record.  The Receiver APCN will be populated within the article data retrieved via the S38 interface</description>
    <inlineHelpText>The Receiver APCN allocated to the ICPS record will be populated when an article is added to an ICPS record.  The Receiver APCN will be populated within the article data retrieved via the S38 interface</inlineHelpText>
    <label>Receiver APCN</label>
    <length>20</length>
    <type>Text</type>
</CustomField>