force-app/main/default/objects/ICPS__c/fields/ReceiverCareOf__c.field-meta.xml
<CustomField>
    <fullName>ReceiverCareOf__c</fullName>
    <description>In the scenario where the receiver name is not an individual, this field will store the name of the individual that should receive the article/s.</description>
    <inlineHelpText>In the scenario where the receiver name is not an individual, this field will store the name of the individual that should receive the article/s.</inlineHelpText>
    <label>Care Of</label>
    <length>80</length>
    <type>Text</type>
</CustomField>