force-app/main/default/objects/ICPS__c/fields/ReceiverEmail__c.field-meta.xml
<CustomField>
    <fullName>ReceiverEmail__c</fullName>
    <description>The email address of the receiver of the article/s.</description>
    <inlineHelpText>The email address of the receiver of the article/s.</inlineHelpText>
    <label>Email</label>
    <type>Email</type>
</CustomField>