force-app/main/default/objects/ICPS__c/fields/ReceiverName__c.field-meta.xml
<CustomField>
    <fullName>ReceiverName__c</fullName>
    <description>The full name of the recipient of the article/s allocated to this ICPS record</description>
    <inlineHelpText>The full name of the recipient of the article/s allocated to this ICPS record</inlineHelpText>
    <label>Receiver Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>