force-app/main/default/objects/ICPS__c/fields/ReceiverStreetLine1__c.field-meta.xml
<CustomField>
    <fullName>ReceiverStreetLine1__c</fullName>
    <description>Line 1 of the Receiver&apos;s address.</description>
    <inlineHelpText>Line 1 of the Receiver&apos;s address.</inlineHelpText>
    <label>Street Line 1</label>
    <length>80</length>
    <type>Text</type>
</CustomField>