force-app/main/default/objects/ICPS__c/fields/ReceiverStreetLine2__c.field-meta.xml
<CustomField>
    <fullName>ReceiverStreetLine2__c</fullName>
    <description>Line 2 of the Receiver&apos;s address,</description>
    <inlineHelpText>Line 2 of the Receiver&apos;s address,</inlineHelpText>
    <label>Street Line 2</label>
    <length>80</length>
    <type>Text</type>
</CustomField>