force-app/main/default/objects/ICPS__c/fields/SenderCity__c.field-meta.xml
<CustomField>
    <fullName>SenderCity__c</fullName>
    <description>The suburb that the sender of the article/s resides in.</description>
    <inlineHelpText>The suburb that the sender of the article/s resides in.</inlineHelpText>
    <label>Suburb</label>
    <length>80</length>
    <type>Text</type>
</CustomField>