force-app/main/default/objects/ICPS__c/fields/SenderCountry__c.field-meta.xml
<CustomField>
    <fullName>SenderCountry__c</fullName>
    <description>The country where the sender resides.</description>
    <inlineHelpText>The country where the sender resides.</inlineHelpText>
    <label>Country</label>
    <length>80</length>
    <type>Text</type>
</CustomField>