force-app/main/default/objects/ICPS__c/fields/SenderName__c.field-meta.xml
<CustomField>
    <fullName>SenderName__c</fullName>
    <description>The name of the individual / organisation that sent the article/s to the recipient.</description>
    <inlineHelpText>The name of the individual / organisation that sent the article/s to the recipient.</inlineHelpText>
    <label>Sender Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>