force-app/main/default/objects/ICPS__c/fields/SenderStreetLine2__c.field-meta.xml
<CustomField>
    <fullName>SenderStreetLine2__c</fullName>
    <description>Line 2 of the Sender&apos;s address.</description>
    <inlineHelpText>Line 2 of the Sender&apos;s address.</inlineHelpText>
    <label>Street Line 2</label>
    <length>80</length>
    <type>Text</type>
</CustomField>