force-app/main/default/objects/ICPS__c/recordTypes/NSW.recordType-meta.xml
<RecordType>
    <fullName>NSW</fullName>
    <active>true</active>
    <description>Allows NSW team members to create NSW ICPS records</description>
    <label>NSW</label>
</RecordType>