force-app/main/default/objects/ICPS__c/recordTypes/QLD.recordType-meta.xml
<RecordType>
    <fullName>QLD</fullName>
    <active>true</active>
    <description>Allows QLD team members to create QLD ICPS records</description>
    <label>QLD</label>
</RecordType>