force-app/main/default/objects/ICPS__c/recordTypes/VIC.recordType-meta.xml
<RecordType>
    <fullName>VIC</fullName>
    <active>true</active>
    <description>Allows VIC team members to create VIC ICPS records</description>
    <label>VIC</label>
</RecordType>