force-app/main/default/objects/ICPS__c/recordTypes/WA.recordType-meta.xml
<RecordType>
    <fullName>WA</fullName>
    <active>true</active>
    <description>Allows WA team members to create WA ICPS records</description>
    <label>WA</label>
</RecordType>