force-app/main/default/objects/ICPS__c/validationRules/ABFFieldsmustbeempty.validationRule-meta.xml
<ValidationRule>
    <fullName>ABFFieldsmustbeempty</fullName>
    <active>true</active>
    <description>The ABF Authoriser and ABF Instruction Date must be empty if the ABF Reason is empty</description>
    <errorConditionFormula>AND(
            ISBLANK(TEXT( ABFReason__c )),
            OR (
            NOT(ISBLANK( ABFInstructionDate__c )),
            NOT(ISBLANK( ABFAuthoriser__c ))
            )
            )</errorConditionFormula>
    <errorMessage>The ABF Authoriser and ABF Instruction Date must be empty if the ABF Reason is empty</errorMessage>
</ValidationRule>