force-app/main/default/objects/ICPS__c/validationRules/ICPSMandatoryDeliveryDate.validationRule-meta.xml
<ValidationRule>
    <fullName>ICPSMandatoryDeliveryDate</fullName>
    <active>true</active>
    <description>If the status of the ICPS record is set to &quot;Delivered&quot;, the delivered date is a required field</description>
    <errorConditionFormula>AND (
   ISPICKVAL( Status__c, &quot;Delivered&quot; ),
   ISBLANK ( DeliveryDate__c )
)</errorConditionFormula>
    <errorDisplayField>DeliveryDate__c</errorDisplayField>
    <errorMessage>The Delivery Date is required when the status is set to &quot;Delivered&quot;</errorMessage>
</ValidationRule>