force-app/main/default/objects/ICPS__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>MailCategory__c</columns>
    <columns>ItemType__c</columns>
    <columns>Status__c</columns>
    <columns>StoredLocation__c</columns>
    <columns>OwnerName__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CountryofOrigin__c</columns>
    <columns>DemurrageStartDate__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Held,In Store,Unknown</value>
    </filters>
    <label>All</label>
</ListView>