force-app/main/default/objects/ICPS__c/listViews/All_QLD_ICPS.listView-meta.xml
<ListView>
    <fullName>All_QLD_ICPS</fullName>
    <columns>NAME</columns>
    <columns>MailCategory__c</columns>
    <columns>ItemType__c</columns>
    <columns>Status__c</columns>
    <columns>StoredLocation__c</columns>
    <columns>OwnerName__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CountryofOrigin__c</columns>
    <columns>DemurrageStartDate__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>ICPS__c.QLD</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Held,In Store,Unknown</value>
    </filters>
    <label>All QLD ICPS</label>
    <sharedTo>
        <role>ICPSNational</role>
        <role>ICPSQLD</role>
    </sharedTo>
</ListView>