force-app/main/default/objects/ICPS__c/listViews/My_ICPS.listView-meta.xml
<ListView>
    <fullName>My_ICPS</fullName>
    <columns>NAME</columns>
    <columns>MailCategory__c</columns>
    <columns>ItemType__c</columns>
    <columns>Status__c</columns>
    <columns>StoredLocation__c</columns>
    <columns>OwnerName__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CountryofOrigin__c</columns>
    <columns>HoldUntilDate__c</columns>
    <columns>DemurrageStartDate__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Held,In Store,Unknown</value>
    </filters>
    <label>My ICPS</label>
</ListView>